- fixed bug in admin/downloads.php: date of submitting was not set in case of new submit (goffy)
- added show error when file size exceed maxuploadsize (goffy)
- removed double entries for modversion/hasMain and hasSearch (goffy)
- usage of same smarty names (error/form) (goffy)
- added class for error message to styles.css (goffy)
- fixed bug for checking category (goffy)

TODO:
- add test data
- do more testing
- update "update.php" file


<h5>1.65 Final [2017/02/02]</h5>
<hr>

- fix error with tree.php (Mage)
- fix error by ref (Mage)
- update class method (Mage)
- fix error with search.php (Mage)
- fix error xoops load (Mage)
- fix makeSelBox() is deprecated (Mage)


<h5>1.63 Beta 2             [2013/08/24]</h5>
<hr>
- fix: Typos (cesagonchu)
- Correcting English language files (cesagonchu)
- removing obsolete bookmarks : Google Reader, Simpy, Spurl (cesagonchu)
- Standardization of syntax in the language folder (cesagonchu)

<h5>1.63 Beta 1           [2012/12/23]</h5>
<hr>
- fix: no need anymore for trans_size in showing file size in search.php (hipoonios/mamba)
- fix: clearing "download" Smarty variable before appending values to it in search.php (hipoonios/mamba)


<h5>1.62 Final          [2012/06/30]</h5>
<hr>

- replaced Google Buzz with Google Plus
- Showing Latest files is optional (DCrussader/Mamba)
- other minor improvements


<h5>1.61                [2011/08/14]</h5>
<hr>

List of bugs:

 - bug in field.php (class moduleadmin not found) (Mage).

List of improvements:

 - Using Frameworks "ModuleClasses" 1.1 (Mage).


<h5>1.6                 [2011/06/19]</h5>
<hr>

List of bugs:

 - It was impossible to choose categories to show in the block admin (nothing is shown) (Mage).
 - In the modification request, if the logo doesn't exist, the default value wasn't "blank.gif" (Mage).
 - In the editing form of a download file, the date wasn't the current date (Mage).
 - Permissions by files don't run well (Mage).